--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
+    "ldrs": "^1.0.2",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-ionicons": "^4.2.1",
     "react-router": "^7.2.0",
+    "react-spinners": "^0.15.0",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
