--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^12.4.7",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
