--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -40,6 +43,7 @@
     "react-ionicons": "^4.2.1",
     "react-router": "^7.2.0",
     "react-spinners": "^0.15.0",
+    "swapy": "^1.0.5",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
